@@ -17,6 +17,9 @@ dctrl-tools (2.8.1) UNRELEASED; urgency=low
     /usr/share/doc/grep-dctrl directory at configure
     Closes: #353533 (Empty /usr/share/doc/grep-dctrl directory)
     Reported by: Martin Orr <martin@martinorr.name>.
+  * grep.dctrl.c,sort-dctrl.c: Use arg, not optarg in parse_opt.
+    Closes: #344087 (grep-dctrl: segfaults with -l options)
+    Reported (with patch) by: Vincent Fourmond <vincent.fourmond@9online.fr>.
 
  -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 25 Feb 2006 20:49:17 +0200
 
